--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -1148,17 +1148,13 @@ hr{
     font-size: 12px;
 }
 ::-webkit-scrollbar {
-  width: 12px;
-}
-::-webkit-scrollbar-track {
-  background: transparent;
+  width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-  background: #888;
+    background: #888;
 }
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
 }
 .wait-item , .delete-item{
   font-size: 12px;
