--- a/industry/static/industry/css/style.css
+++ b/industry/static/industry/css/style.css
@@ -858,14 +858,13 @@ a:hover, a:focus{
     margin-left: 10px;
 }
 input, textarea, select{
-  background-color: #fdfdfd;
-  border: 1px solid #bdbdbd;
+  background-color: #fefefe;
+  border: 1px solid #bdbdbd85;
   color: #6f7285;
   border-radius: 5px;
   margin-top: 20px;
   direction: rtl;
-  padding-right: 10px;
-  font-size: 13px;
+  padding: 10px;
 }
 select{
     border-radius: 5px 0 0 5px;
@@ -884,7 +883,28 @@ label{
   top: 28px;
   right: 25px;
   color: #6f7285;
+  z-index: 0;
   transition: 300ms all ease;
+}
+label.full-focus-out:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    z-index: -1;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transition: all ease 0.3s;
 }
 label.fix{
   position: absolute;
@@ -1236,8 +1256,8 @@ hr{
 }
 .info-card{
   margin: 20px 100px;
-  padding: 20px;
-  color: #000;
+  padding: 10px;
+  color: #6f7285;
 }
 .row{
   direction: rtl!important;
@@ -1272,11 +1292,22 @@ hr{
   background-color: #3CCD1C;
   outline: none;
 }
+.card-header {
+    padding: 0;
+    font-weight: 800;
+    font-size: 16px;
+    border: none;
+    margin: 0;
+    background-color: transparent;
+}
 .inner-card{
-    padding: 10px;
-    margin: 25px auto;
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
     background-color: #fff;
-    box-shadow: 0px 0px 5px 0 rgba(0,0,0,0.16);
+    border: none;
+    border-top: 1px solid #dee2e6;
+    border-radius: 0;
 }
 .ch-card-item:last-child{
   margin-bottom: 25px;
