--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -8,6 +8,9 @@
 {% block name %}رضا باسره{% endblock %}
 {% block dialog %}
     {% include 'researcher/layouts/dialog.html' %}
+    {% include 'researcher/layouts/scientific_form.html' %}
+    {% include 'researcher/layouts/executive_form.html' %}
+    {% include 'researcher/layouts/research_form.html' %}
 {% endblock %}
 {% block content %}
     <div class="row">
