ordered front_end files-2

--- a/expert/templates/expert/layouts/scientific_form.html
+++ b/expert/templates/expert/layouts/scientific_form.html
@@ -7,33 +7,40 @@
         <div class="container">
             <form method="post" action="" class="ajax-sci-form" data-url="{% url 'expert:ajax_scientific' %}">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <label for="edu-section">مقطع تحصیلی</label>
-                        {{ scientific_form.degree|attr:"id:edu-section"|attr:"class:w-100" }}
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label for="edu-section">مقطع تحصیلی</label>
+                                {{ scientific_form.degree|attr:"id:edu-section"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label for="edu-subject">رشته تحصیلی</label>
+                                {{ scientific_form.major|attr:"id:edu-subject"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label for="university">دانشگاه</label>
+                                {{ scientific_form.university|attr:"id:university"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label for="edu-city">شهر محل تحصیل</label>
+                                {{ scientific_form.city|attr:"id:edu-city"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label for="edu-year">سال اخذ مدرک</label>
+                                {{ scientific_form.date_of_graduation|attr:"id:edu-year"|attr:"class:w-100" }}
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <label for="edu-subject">رشته تحصیلی</label>
-                        {{ scientific_form.major|attr:"id:edu-subject"|attr:"class:w-100" }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <label for="university">دانشگاه</label>
-                        {{ scientific_form.university|attr:"id:university"|attr:"class:w-100" }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <label for="edu-city">شهر محل تحصیل</label>
-                        {{ scientific_form.city|attr:"id:edu-city"|attr:"class:w-100" }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <label for="edu-year">سال اخذ مدرک</label>
-                        {{ scientific_form.date_of_graduation|attr:"id:edu-year"|attr:"class:w-100" }}
+                    <div class="col-6 flex-display">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="width: 100%" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 675.31 707.54"><defs><style>.scientific-cls-1{fill:none;}.scientific-cls-2{fill:#f8fdf7;}.scientific-cls-3{clip-path:url(#clip-path);}.scientific-cls-4{fill:#db9c7c;}.scientific-cls-5{fill:#272a45;}.scientific-cls-6{fill:#eea886;}.scientific-cls-7{fill:#292929;}.scientific-cls-8{fill:#525252;}.scientific-cls-9{fill:#a77860;}.scientific-cls-10{fill:#c4b5ae;}.scientific-cls-11{fill:#f08d29;}.scientific-cls-12{fill:#ead8cf;}.scientific-cls-13{fill:#51578f;}.scientific-cls-14{fill:#ff4545;}</style><clipPath id="clip-path" transform="translate(0 -13.77)"><rect class="scientific-cls-1" x="166.29" width="437.11" height="701.4"/></clipPath></defs><title>Asset 4</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="scientific-cls-2" d="M4.92,273.69C21.64,158.19,89.61,15.74,164.24,14.79,226.35,14,233,112,340.41,184.83,489,285.52,634.14,205,668.24,264.49,726.27,365.8,415,789.74,185.68,711.81,42.82,663.26-18.68,436.67,4.92,273.69Z" transform="translate(0 -13.77)"/><g class="scientific-cls-3"><path class="scientific-cls-4" d="M522.34,456.83s22.64-9.56,26.15-10.91,13.72,1,25.23,4.66,25.39,13.83,26,15.83,2.07,3.77.32,8.83a20.3,20.3,0,0,1-6,8.36s.77,7.24-4.79,10.92a10.74,10.74,0,0,1-6.58,10s.23,6.69-5,8.55c0,0-10.25-2.31-14.29-2.07s-24.14-8-43.35-17.15C519.93,493.85,497.46,486.63,522.34,456.83Z" transform="translate(0 -13.77)"/><path class="scientific-cls-5" d="M418.22,352.49s-36.49-72,5.82-98.21c0,0,15.31,4.67,28.88,19.88s24.5,40.16,28,48.18,24.93,57.12,26.51,59.81c5.57,9.44,7.93,20.12,18.78,34.43,20.12,26.53,29.55,33,29.55,33l-34.07,48.82s-23.25-15.36-54.25-44.3C467.4,454.14,423.44,368.1,418.22,352.49Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M549.44,446.09s15.24,14.47,20.1,26c1.09,2.62,1.68,5.35-.33,7.35s-7.48,1.64-14.4-4.29-18.59-10.44-18.59-10.44S530.89,456.56,549.44,446.09Z" transform="translate(0 -13.77)"/><rect class="scientific-cls-7" x="250.15" y="78.26" width="2.59" height="64.44"/><path class="scientific-cls-7" d="M251.49,154.44h-.08c-6.11.29-5.41,31.73-5.41,31.73h10.89S257.6,154.73,251.49,154.44Z" transform="translate(0 -13.77)"/><path class="scientific-cls-5" d="M456.45,356.84c-.82-18.29-14.44-84-22.16-90.66-7.11-6.3-67.07-18.7-67.07-18.7H299.54s-72.82,9.87-83.39,18.81-21.07,89.11-21.07,89.11,14.64,115.08,20.73,165c4.44,36.46-12.67,167.75-14.91,184.63,14,1.79,28,3.22,42.09,4.54l12.88,1.18c98.2,1.67,184.2-22.76,184.2-22.76-4.88-39.43-6.29-179.57,1.43-208S457.26,375.13,456.45,356.84Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M342.44,62.09s72.12-26.68,67.61,69.16-21.41,105.58-68.85,92.19-51.42-73.87-57.6-103S318.85,66.28,342.44,62.09Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M376.66,260.46s-14.85,9.81-71.12-15c0,0,1.59-38.58-9.45-74.62s75.52,48,75.52,48c-.91.64-1.08,4.24-.57,9.27a103.09,103.09,0,0,0,2.78,14.89C377,255.11,376.66,249.94,376.66,260.46Z" transform="translate(0 -13.77)"/><path class="scientific-cls-8" d="M293.63,168s-.21-25.6,10.44-27.95,14.26,8.6,14.26,8.6l10.81-1.3s-8-21.26,2.12-27.21,70.87-.72,78.49-9.46-3.43-60.61-20-65.71-61.82-15.41-90.56,10.18c0,0-25,.47-26,20.83S285,154.12,293.63,168Z" transform="translate(0 -13.77)"/><path class="scientific-cls-9" d="M373.82,243.07c-55.9-9.4-64.25-41.19-64.38-41.69,21.73,28,61.6,26.8,61.6,26.8A103.09,103.09,0,0,0,373.82,243.07Z" transform="translate(0 -13.77)"/><path class="scientific-cls-5" d="M435.06,260s34.07,28.1,21.45,100.77C433.7,492,493.42,702.82,493.42,702.82l-61.61,6.35s-58.88-263.93-43.88-361.72c6.83-44.56,27.11-59.39-4.88-96.52C383.05,250.93,414.19,251.57,435.06,260Z" transform="translate(0 -13.77)"/><path class="scientific-cls-5" d="M211.27,520.08c-4.7,18.58-24.07,160.85-27.83,188.59,12.5,2,25.05,3.68,37.62,5.1l180.13,2a55.61,55.61,0,0,1,6.08-1.63A28.56,28.56,0,0,1,425.45,716l13.12.15s-36-306.38-43.67-352.43S289.74,256.92,289.74,256.92s-41.32,3.58-70.16,7.67-30.11,40.26-17.74,69.78C239.75,424.9,216.47,499.48,211.27,520.08Z" transform="translate(0 -13.77)"/><polygon class="scientific-cls-5" points="412.21 77.91 476.17 52.04 358.09 0 207.11 77.91 277.89 104.08 412.21 77.91"/><path class="scientific-cls-10" d="M283,249.94s57.85,39,100.07,49.07c1.75.42,0-48.08,0-48.08S347.57,236.73,283,249.94Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M323.32,243.92s22.94,11,40.76,12.63c0,0,9.23-3.44,9.74-13.48Z" transform="translate(0 -13.77)"/><path class="scientific-cls-11" d="M383.05,299V250.93s34.92-1,44.5,4.69Z" transform="translate(0 -13.77)"/><path class="scientific-cls-12" d="M373.82,243.07s-3.1,10.17-9.74,13.48l20.76,22.17-1.79-27.79Z" transform="translate(0 -13.77)"/><path class="scientific-cls-13" d="M412,104s-61.92-7.09-131.22,24.72l-6-21.37S352.89,78,413.36,85.25Z" transform="translate(0 -13.77)"/><polygon class="scientific-cls-14" points="582.69 392.55 565.5 608.97 426.59 597.94 438.35 381.08 582.69 392.55"/><path class="scientific-cls-6" d="M393.63,528.69s5.63,1.62,10-.35c7.47-3.4,12.39-15.37,23.53-11.44s8.65,42.79,4.34,49.13-20.78,5.71-43-5.34S393.63,528.69,393.63,528.69Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M423.19,516.12a340.21,340.21,0,0,1,37.2-.84c17.28.61,38.65,3.78,38.55,8.14-.15,6.6-17.37,2-34.54,2.55-15.81.51-12.6,3.09-12.6,3.09s-.88-.79,16.47,2c18.64,3,38.54,7.09,38.53,10.66,0,4.42-.4,5-7.34,5,4,.86,4.33,2.09,4.14,3.8-1,8.89-29.1,8.73-40.25,8.66,8.57.11,14.84,1.11,10.71,6.15-4.73,5.76-44.43,3.73-58.71,4.38C399.76,570.44,423.19,516.12,423.19,516.12Z" transform="translate(0 -13.77)"/><path class="scientific-cls-5" d="M216,262.39c12.57-.77,49.87,19.93,44.9,50.85-4.13,25.74-1.47,46.05-2.33,56.37s-1,79.34,5.13,85.77c7.75,8.15,51.36,29.34,55.34,31.9,13.7,8.83,81.27,37.22,81.27,37.22l-13.1,52.61S238.4,517,223,505.47c-10.16-7.6-25.92-18.52-30.05-51.14-4.19-33.15-14.54-93.31-14.06-99.95S160.14,265.82,216,262.39Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M596.7,465.33s-29-8.43-31.37-4.08c-3.34,6,.07,7.44.07,7.44l-13.71,1.92s-8.36,6.41,1.06,13.64c0,0-8.43,5.17,1.5,11.07,0,0-4,5.89.07,9.43s23.25,8.32,23.25,8.32,4.5-.81,5-8.55c0,0,6.88-2.62,6.58-10,0,0,5.18-3,4.79-10.92,0,0,11-7.51,5.69-17.19C599.68,466.41,597.94,465.69,596.7,465.33Z" transform="translate(0 -13.77)"/><path class="scientific-cls-11" d="M299.51,247.11,383.05,299,210.47,263.2S244.68,253.85,299.51,247.11Z" transform="translate(0 -13.77)"/><path class="scientific-cls-12" d="M305.56,234.81s29.42,17.75,58.52,21.74l-10.71,29.38L299,247.11Z" transform="translate(0 -13.77)"/><path class="scientific-cls-8" d="M397.84,114.72s-37.86,25.57-70,32.94-34.21,19.39-34.21,19.39S269.57,121,322.23,115.92,397.84,114.72,397.84,114.72Z" transform="translate(0 -13.77)"/><path class="scientific-cls-6" d="M317.68,135.69c-3.18-8.45-21.17-7.38-19.33,6s16.71,34,22.68,30.15S322.08,147.33,317.68,135.69Z" transform="translate(0 -13.77)"/><path class="scientific-cls-8" d="M397.84,114.72l12.36,12.33S412.55,108.57,412,104C412,104,402.37,107.61,397.84,114.72Z" transform="translate(0 -13.77)"/></g></g></g></svg>
                     </div>
                 </div>
                 <div class="card-footer">
