--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,9 +36,31 @@
         </form>
     </div>
 
+    <form method="post" action="" novalidate class="sign-up-ajax" data-url="{% url 'chamran:signup_email' %}">
+        {% csrf_token %}
+        <div class="user-type-container">
+            {#                <input type="radio" name="user-type" id="researcher" value="researcher">#}
+            {#                {{ form.account_type.2|attr:"id:researcher" }}#}
+            {#                <label for="researcher" class="user-type researcher text-center">پژوهشگر</label>#}
+            {#                <input type="radio" name="user-type" id="expert" value="expert">#}
+            {#                <label for="expert" class="user-type expert text-center">استاد</label>#}
+            {#                <input type="radio" name="user-type" id="industry" value="industry">#}
+            {#                <label for="industry" class="user-type industry text-center">صنعت</label>#}
+            {{ form.account_type }}
+
+        </div>
+{#        <div class="email">#}
+            <label for="email">پست الکترونیکی</label>
+            {{ form.email|attr:"id:email" }}
+            {{ form.email.errors }}
+            <i class="fas fa-at fa-lg"></i>
+{#        </div>#}
+        <button type="submit" name="sign_up" class="Enter-btn">عضویت</button>
+    </form>
+
     <div class="card-footer">
         <a href="{% url 'chamran:recover_password' %} " class="forget-pass">رمز عبور خود را فراموش کرده اید؟</a>
-        <p class="new-user">کاربر جدید هستید؟ <a href="{% url 'chamran:signup_email' %}" onclick='signUp()'>عضویت</a>
+        <p class="new-user">کاربر جدید هستید؟ <a href="#" onclick='signUp()'>عضویت</a>
         </p>
     </div>
 </div>
