--- a/researcher/templates/researcher/messages.html
+++ b/researcher/templates/researcher/messages.html
@@ -5,7 +5,7 @@
 {% block name %} دکتر احسان شریف{% endblock %}
 
 {% block dialog %}
-    {% include 'expert/layouts/message_show.html' %}
+    {% include 'researcher/layouts/message_show.html' %}
 {% endblock %}
 
 {% block content %}
@@ -17,9 +17,9 @@
                     <span class="title-back"></span>
                     <div class="row slide-messages">
                         {% for message in top_3 %}
-                            <div class="col-lg-4 slide-message">
-                                <div class="messages-container">
-                                    <div class="card
+                        <div class="col-lg-4 slide-message">
+                            <div class="messages-container">
+                                <div class="card
                                     {% if message.0.type == 0 %}
                                         notice-message
                                     {% elif message.0.type == 1 %}
@@ -28,9 +28,9 @@
                                         news-message
                                     {% endif %}
                                 ">
-                                        <div class="message-head">
-                                            <div class="icon">
-                                                <img src="
+                                    <div class="message-head">
+                                        <div class="icon">
+                                            <img src="
                                             {% if  message.0.type == 0 %}
                                                 {% static 'industry/img/tick.svg' %}
                                             {% elif message.0.type == 1 %}
@@ -39,22 +39,22 @@
                                                 {% static 'industry/img/megaphone.png' %}
                                             {% endif %}
                                             " alt="message-type-icon">
-                                            </div>
-                                            <div class="date">{{ message.1 }}</div>
                                         </div>
-                                        <div class="message-body">
-                                            <div class="title">
-                                                <span>{{ message.0.title }}</span>
-                                            </div>
-                                            <div class="text">
-                                                <span>{{ message.0.text }}</span>
-                                            </div>
-                                            <button>مشاهده</button>
-                                            <div class="message-code">{{ message.0.code }}</div>
+                                        <div class="date">{{ message.1 }}</div>
+                                    </div>
+                                    <div class="message-body">
+                                        <div class="title">
+                                            <span>{{ message.0.title }}</span>
                                         </div>
+                                        <div class="text">
+                                            <span>{{ message.0.get_short_text }}</span>
+                                        </div>
+                                        <button id="{{ message.0.id }}">مشاهده</button>
+                                        <div class="message-code">{{ message.0.code }}</div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         {% endfor %}
                     </div>
                 </div>
@@ -95,8 +95,8 @@
                                         </div>
                                     </div>
                                     <div class=" message-body-sm">
-                                        <span class="body">{{ message.0.text }}</span>
-                                        <button>مشاهده</button>
+                                        <span class="body">{{ message.0.get_short_text }}</span>
+                                        <button id="{{ message.0.id }}">مشاهده</button>
                                         <span class="message-code">{{ message.0.code }}</span>
                                     </div>
                                 </div>
@@ -108,4 +108,20 @@
         </div>
     </div>
 {% endblock %}
-{% block script %}{% endblock %}
+{% block script %}
+    <script>
+        {#just for test#}
+        $("button").click(function(){
+            const id = $(this).attr('id');
+            console.log('id is ' + id);
+            $.ajax({
+                url: '/message_detail/' + id,
+                data: {},
+                dataType: 'json',
+                success: function(data){
+                    console.log(data);
+                }
+            });
+        });
+    </script>
+{% endblock %}
