--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -56,21 +56,19 @@
                         <div class="row">
                             <div class="col-lg-12 rankDiv">
                                 <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
-                                <select id="id_industry_type" name="industry_type" class="w-100">
-                                    <option dir="rtl">انتخاب کنید ...</option>
-                                    {#                                    <option value="1">دولتی</option>#}
-                                    {#                                    <option value="2">خصوصی</option>#}
-                                    {% for option in form.industry_type %}
-                                        {{ option }}
-                                    {% endfor %}
-                                </select>
+{#                                <select id="id_industry_type" name="industry_type" class="w-100">#}
+{#                                    <option dir="rtl">انتخاب کنید ...</option>#}
+{#                                    {% for option in form.industry_type %}#}
+{#                                        {{ option }}#}
+{#                                    {% endfor %}#}
+                                    {{ form.industry_type|attr:"class:w-100" }}
+{#                                </select>#}
                                 {% render_field form.industry_type.errors %}
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <label for="id_industry_address">آدرس</label>
-                                {#                                <textarea dir="rtl" rows="3" class="w-100" id="Address"></textarea>#}
                                 {% render_field form.industry_address dir="rtl" rows="3" class="w-100" readonly="true" %}
                             </div>
                         </div>
